@@ -3,6 +3,7 @@ Revision history for LWP-ConsoleLogger
 {{$NEXT}}
 
     - Converted from Moose to Moo
+    - Now uses HTTP::Body to parse POST params
 
 0.000014  2015-03-18 18:09:23-04:00 America/Toronto
     - text_pre_filter subs should now return a content type
